# pytube-downloader

./: .env.example  .gitignore  .pre-commit-config.yaml  C:\Users\anxercode\AppData\Local\PyTube Downloader\data\general.json  LICENSE  README.md  README_zh.md  VERSION  app.py  contributors.txt  dependencies_installer.py  dependencies_updater.py  main.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  release.yml
data/: info.json  languages.json  themes.json
data/themes/: deep_ocean.json  forest_emerald.json  neon_abyss.json  nord_breeze.json
services/: __init__.py  download_manager.py  download_speed_tracker.py  history_manager.py  information_manager.py  language_manager.py  load_manager.py  loading_indicate_manager.py  notification_manager.py  theme_manager.py  video_convert_manager.py  video_count_tracker.py
settings/: __init__.py  appearance_settings.py  general_settings.py
tests/: test_date_time_utility.py  test_file_utility.py  test_json_utility.py  test_settings_validate_utility.py  test_value_convert_utility.py
utils/: __init__.py  data_base_utility.py  data_retrive_utility.py  date_time_utility.py  download_info_utility.py  file_utility.py  gui_utils.py  image_utility.py  json_utility.py  logger.py  settings_validate_utility.py  value_convert_utility.py
widgets/: __init__.py
widgets/components/: __init__.py  accent_color_button.py  contributor_profile_widget.py  setting_navigate_button.py  thumbnail_button.py
widgets/core_widgets/: __init__.py  alert_window.py  context_menu.py  setting_panel.py  tray_menu.py
widgets/history_widgets/: __init__.py  history_object.py  history_panel.py  history_playlist.py  history_video.py
(+17 files in other folders)
